--- a/style.css
+++ b/style.css
@@ -98,3 +98,10 @@ ul li:hover {
     width:10%;
     font-family:arial;
 }
+
+#loadingScreen {
+    margin: auto;
+    margin-top: 20%;
+    text-align: center;
+    font-size: 16vw;
+}
