--- a/style.css
+++ b/style.css
@@ -38,3 +38,15 @@ body {
      margin-right: 4%;
      margin-left: 4%;
  }
+
+#back1 {
+    background-color: white;
+    color: black;
+    border: 2px solid rgba(0, 0, 0, 0.99);
+}
+
+#back2 {
+    background-color: white;
+    color: black;
+    border: 2px solid rgba(0, 0, 0, 0.99);
+}
