--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@
 }
 
 body {
-    font-family: " Source Sans Pro, sans-serif";
+    font-family: "Helvetica Neue";
 
 
 }
 
  *{
-    font-family: " Source Sans Pro, sans-serif";
+    font-family: "Helvetica Neue";
 }
 
  #xx {
