--- a/style.css
+++ b/style.css
@@ -50,3 +50,7 @@ body {
     color: black;
     border: 2px solid rgba(0, 0, 0, 0.99);
 }
+
+#myButton {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
